Fixing layout issue on admin drink page

--- a/app/assets/stylesheets/bootstrap-custom.css.scss
+++ b/app/assets/stylesheets/bootstrap-custom.css.scss
@@ -1976,6 +1976,12 @@ $beer-header-lines-to-show-fp: 1;
     z-index: 1000;
   }
 }
+.admin-drink-container {
+  margin-top: 10px;
+}
+.admin-drink-header-row {
+  margin-bottom: 10px;
+}
 .drink-list-container {
   margin-top: 118px;
 }
